--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,7 @@ permissions:
 
 jobs:
   setup-gui-runner:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     env:
       TAILSCALE_AUTHKEY: ${{ secrets.TAILSCALE_AUTHKEY }}
       USERNAME: runner
